--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-	<html>
+<!doctype html>
+<html>
 	<head>
-		<base href="/">
+		<base href="/" />
 		<title>Hello</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 	</head>
 	<body>
 		<app-root></app-root>
